--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ search: true
 
 #Header image
 header:
-  overlay_image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
+  image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 
 # Build settings
