--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ plugins:
 author:
   name   : "Joël Prins"
   avatar : "/assets/images/Transparant.png"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Just a boy from The Netherlands writing about cloudy stuff."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
