--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/0125joel"
+    - label: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/in/jo%C3%ABl-prins-4b4655aa/"
 
 
 footer:
