--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: splash
+      layout: single
       author_profile: true
       read_time: true
       comments: true
@@ -106,7 +106,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: Single
+      layout: single
       author_profile: true
 
 category_archive:
