--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/jo%C3%ABl-prins-4b4655aa/"
-
+    - label: "Discord"
+      icon: "fab fa-fw fa-discord"
+      url: "https://discord.gg/4J5WsZM7"
 
 footer:
   links:
