--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ twitter_username: 0125joel
 github_username: 0125joel
 minimal_mistakes_skin: dark
 search: true
+google_site_verification: G-TREM4D8RS2
 
 
 
