--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: splash
+      layout: single
       author_profile: false
 
 category_archive:
