--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
+      author_profile: true
 
 category_archive:
   type: liquid
